# iskissingthehomiesgoodnight.gay

./: .gitignore  CNAME  Makefile  README.md  contributors.json  contributors.schema.json  index.html  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: build.yml  publish.yml
helpers/: add_style
server_src/: Cargo.toml
server_src/src/: main.rs
src/: contributors.json  contributors.ts  index.html  index.ts
src/contributors/: jakobkg.json
src/scripts/jakobkg/: jakob.ts
src/styles/jakobkg/: bigcursive.css  jakob.css
