[package]
name = "server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
production = ["actix-web/openssl", "openssl"]

[dependencies]
actix-web = { version = "4" }
openssl = { version = "0.10", optional = true }
actix-files = "0.6"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
lazy_static = "1"
